--- a/eval.html
+++ b/eval.html
@@ -114,11 +114,11 @@
 
     <script>
         const modelConfigs = [
-            { path: 'larry_david_valid.jsonl', name: 'GPT-4o' },    
-            { path: 'gpt-3.5-turbo_scrape.jsonl', name: 'GPT-3.5' },
-            { path: 'scrape_gpt-3.5-ft.jsonl', name: 'GPT-3.5-Finetuned' },
-            { path: 'llama_3.1_scrape.jsonl', name: 'Llama-3.1-8B' },
-            { path: 'llama_3.1_ft_scrape.jsonl', name: 'Llama-3.1-8B-Finetuned' }
+            { path: 'data/larry_david_valid.jsonl', name: 'GPT-4o' },    
+            { path: 'data/gpt-3.5-turbo_scrape.jsonl', name: 'GPT-3.5' },
+            { path: 'data/scrape_gpt-3.5-ft.jsonl', name: 'GPT-3.5-Finetuned' },
+            { path: 'data/llama_3.1_scrape.jsonl', name: 'Llama-3.1-8B' },
+            { path: 'data/llama_3.1_ft_scrape.jsonl', name: 'Llama-3.1-8B-Finetuned' }
         ];
 
         let modelData = [];
